MapFlatMapTest update